fix dropdown links, and image stretching

--- a/app/static/css/preview.css
+++ b/app/static/css/preview.css
@@ -81,3 +81,7 @@ body {
         font-size: 18px;
     }
 }
+
+.preview-image {
+  object-fit: contain;
+}
